# OasisHurricane

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
benchmark/: benchmark.sh  plot_timing_results.ipynb
benchmark/timings/: timings_s0.txt  timings_s1.txt  timings_s2.txt  timings_s3.txt  timings_s4.txt  timings_s5.txt
oasishurricane/: __init__.py  cli.py  logs.py  model.py  simulator.py  tests.py  utils.py
