# to set version dynamically: https://github.com/pypa/setuptools/issues/1724#issuecomment-627241822

[metadata]
name = oasishurricane
version = attr: oasishurricane.__version__
author = Marco Tazzari
author_email = marco.tazzari@gmail.com
description = A Python command-line utility for Linux that computes the economic loss for hurricanes in Florida and in the Gulf states.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3
license_file = LICENSE
include_package_data = False
url = https://github.com/mtazzari/oasishurricane
project_urls =
    Bug Tracker = https://github.com/mtazzari/oasishurricane/issues
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    catastrophe
    catastrophemodelling
    insurtech

[options]
packages = oasishurricane

# python_requires docs: https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
python_requires = >=3.6

# PEP 440 - pinning package versions: https://www.python.org/dev/peps/pep-0440/#compatible-release
install_requires =
    numpy>=1.9
    numba

[options.extras_require]
test = pytest

# configuring entry_points in setup.cfg:
# https://stackoverflow.com/questions/48884796/how-to-setup-entry-points-in-setup-cfg/48891252
[options.entry_points]
console_scripts =
    gethurricaneloss = oasishurricane.cli:main

